--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="vibe">Click!</button>
+    <button id="play">Play</button>
 </body>
 <script src="script.js"></script>
 </html>
